rover_fisico/ROS2_ROVER/log/build_2025-11-27_20-29-11/ctrl_vel_motores/stderr.log
  File "/home/javier/ROVER_V1/install/ctrl_vel_motores/lib/python3.12/site-packages/ctrl_vel_motores/velocidad_teclado.py", line 24
    self.get_logger().info(f'Velocidad: ' {vel})
                           ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

